sandbox/raptor2/fp_raptor2.pas


function raptor_unicode_utf8_string_put_char(c:Traptor_unichar; output:Pbyte; length:Tsize_t):longint;cdecl;external libraptor2;
function raptor_unicode_utf8_string_get_char(input:Pbyte; length:Tsize_t; output:Praptor_unichar):longint;cdecl;external libraptor2;
function raptor_unicode_is_xml11_namestartchar(c:Traptor_unichar):longint;cdecl;external libraptor2;
function raptor_unicode_is_xml10_namestartchar(c:Traptor_unichar):longint;cdecl;external libraptor2;
function raptor_unicode_is_xml11_namechar(c:Traptor_unichar):longint;cdecl;external libraptor2;
function raptor_unicode_is_xml10_namechar(c:Traptor_unichar):longint;cdecl;external libraptor2;
function raptor_unicode_check_utf8_string(_string:Pbyte; length:Tsize_t):longint;cdecl;external libraptor2;
function raptor_unicode_utf8_strlen(_string:Pbyte; length:Tsize_t):longint;cdecl;external libraptor2;
function raptor_unicode_utf8_substr(dest:Pbyte; dest_length_p:Psize_t; src:Pbyte; src_length:Tsize_t; startingLoc:longint; 
           length:longint):Tsize_t;cdecl;external libraptor2;
{ Stringbuffer Class  }
function raptor_new_stringbuffer:Praptor_stringbuffer;cdecl;external libraptor2;
procedure raptor_free_stringbuffer(stringbuffer:Praptor_stringbuffer);cdecl;external libraptor2;
{ methods  }
function raptor_stringbuffer_append_counted_string(stringbuffer:Praptor_stringbuffer; _string:Pbyte; length:Tsize_t; do_copy:longint):longint;cdecl;external libraptor2;
function raptor_stringbuffer_append_string(stringbuffer:Praptor_stringbuffer; _string:Pbyte; do_copy:longint):longint;cdecl;external libraptor2;
function raptor_stringbuffer_append_decimal(stringbuffer:Praptor_stringbuffer; integer:longint):longint;cdecl;external libraptor2;
function raptor_stringbuffer_append_hexadecimal(stringbuffer:Praptor_stringbuffer; hex:longint):longint;cdecl;external libraptor2;
function raptor_stringbuffer_append_stringbuffer(stringbuffer:Praptor_stringbuffer; append:Praptor_stringbuffer):longint;cdecl;external libraptor2;
function raptor_stringbuffer_prepend_counted_string(stringbuffer:Praptor_stringbuffer; _string:Pbyte; length:Tsize_t; do_copy:longint):longint;cdecl;external libraptor2;
function raptor_stringbuffer_prepend_string(stringbuffer:Praptor_stringbuffer; _string:Pbyte; do_copy:longint):longint;cdecl;external libraptor2;
function raptor_stringbuffer_as_string(stringbuffer:Praptor_stringbuffer):Pbyte;cdecl;external libraptor2;
function raptor_stringbuffer_length(stringbuffer:Praptor_stringbuffer):Tsize_t;cdecl;external libraptor2;
function raptor_stringbuffer_copy_to_string(stringbuffer:Praptor_stringbuffer; _string:Pbyte; length:Tsize_t):longint;cdecl;external libraptor2;
{*
 * raptor_iostream_init_func:
 * @context: stream context data
 *
 * Handler function for #raptor_iostream initialising.
 *
 * Return value: non-0 on failure.
  }
type

  Traptor_iostream_init_func = function (context:pointer):longint;cdecl;
{*
 * raptor_iostream_finish_func:
 * @context: stream context data
 *
 * Handler function for #raptor_iostream terminating.
 *
  }

  Traptor_iostream_finish_func = procedure (context:pointer);cdecl;
{*
 * raptor_iostream_write_byte_func
 * @context: stream context data
 * @byte: byte to write
 *
 * Handler function for implementing raptor_iostream_write_byte().
 *
 * Return value: non-0 on failure.
  }

  Traptor_iostream_write_byte_func = function (context:pointer; byte:longint):longint;cdecl;
{*
 * raptor_iostream_write_bytes_func:
 * @context: stream context data
 * @ptr: pointer to bytes to write
 * @size: size of item
 * @nmemb: number of items
 *
 * Handler function for implementing raptor_iostream_write_bytes().
 *
 * Return value: non-0 on failure.
  }

  Traptor_iostream_write_bytes_func = function (context:pointer; ptr:pointer; size:Tsize_t; nmemb:Tsize_t):longint;cdecl;
{*
 * raptor_iostream_write_end_func:
 * @context: stream context data
 *
 * Handler function for implementing raptor_iostream_write_end().
 *
 * Return value: non-0 on failure.
  }

  Traptor_iostream_write_end_func = function (context:pointer):longint;cdecl;
{*
 * raptor_iostream_read_bytes_func:
 * @context: stream context data
 * @ptr: pointer to buffer to read into
 * @size: size of buffer
 * @nmemb: number of items
 *
 * Handler function for implementing raptor_iostream_read_bytes().
 *
 * Return value: number of items read, 0 or < @size on EOF, <0 on failure
  }

  Traptor_iostream_read_bytes_func = function (context:pointer; ptr:pointer; size:Tsize_t; nmemb:Tsize_t):longint;cdecl;
{*
 * raptor_iostream_read_eof_func:
 * @context: stream context data
 *
 * Handler function for implementing raptor_iostream_read_eof().
 *
 * Return value: non-0 if EOF
  }

  Traptor_iostream_read_eof_func = function (context:pointer):longint;cdecl;
{*
 * raptor_iostream_handler:
 * @version: interface version.  Presently 1 or 2.
 * @init:  initialisation handler - optional, called at most once (V1)
 * @finish: finishing handler -  optional, called at most once (V1)
 * @write_byte: write byte handler - required (for writing) (V1)
 * @write_bytes: write bytes handler - required (for writing) (V1)
 * @write_end: write end handler - optional (for writing), called at most once (V1)
 * @read_bytes: read bytes handler - required (for reading) (V2)
 * @read_eof: read EOF handler - required (for reading) (V2)
 *
 * I/O stream implementation handler structure.
 * 
  }
{ V1 functions  }
{ V2 functions  }

  Praptor_iostream_handler = ^Traptor_iostream_handler;
  Traptor_iostream_handler = record
      version : longint;
      init : Traptor_iostream_init_func;
      finish : Traptor_iostream_finish_func;
      write_byte : Traptor_iostream_write_byte_func;
      write_bytes : Traptor_iostream_write_bytes_func;
      write_end : Traptor_iostream_write_end_func;
      read_bytes : Traptor_iostream_read_bytes_func;
      read_eof : Traptor_iostream_read_eof_func;
    end;
{ I/O Stream Class  }

function raptor_new_iostream_from_handler(world:Praptor_world; user_data:pointer; handler:Praptor_iostream_handler):Praptor_iostream;cdecl;external libraptor2;
function raptor_new_iostream_to_sink(world:Praptor_world):Praptor_iostream;cdecl;external libraptor2;
function raptor_new_iostream_to_filename(world:Praptor_world; filename:Pchar):Praptor_iostream;cdecl;external libraptor2;
function raptor_new_iostream_to_file_handle(world:Praptor_world; handle:PFILE):Praptor_iostream;cdecl;external libraptor2;
function raptor_new_iostream_to_string(world:Praptor_world; string_p:Ppointer; length_p:Psize_t; malloc_handler:Traptor_data_malloc_handler):Praptor_iostream;cdecl;external libraptor2;
function raptor_new_iostream_from_sink(world:Praptor_world):Praptor_iostream;cdecl;external libraptor2;
function raptor_new_iostream_from_filename(world:Praptor_world; filename:Pchar):Praptor_iostream;cdecl;external libraptor2;
function raptor_new_iostream_from_file_handle(world:Praptor_world; handle:PFILE):Praptor_iostream;cdecl;external libraptor2;
function raptor_new_iostream_from_string(world:Praptor_world; _string:pointer; length:Tsize_t):Praptor_iostream;cdecl;external libraptor2;
procedure raptor_free_iostream(iostr:Praptor_iostream);cdecl;external libraptor2;
function raptor_iostream_write_bytes(ptr:pointer; size:Tsize_t; nmemb:Tsize_t; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_iostream_write_byte(byte:longint; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_iostream_write_end(iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_iostream_string_write(_string:pointer; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_iostream_counted_string_write(_string:pointer; len:Tsize_t; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_iostream_tell(iostr:Praptor_iostream):dword;cdecl;external libraptor2;
function raptor_iostream_decimal_write(integer:longint; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_iostream_hexadecimal_write(integer:dword; width:longint; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_stringbuffer_write(sb:Praptor_stringbuffer; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_uri_write(uri:Praptor_uri; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_iostream_read_bytes(ptr:pointer; size:Tsize_t; nmemb:Tsize_t; iostr:Praptor_iostream):longint;cdecl;external libraptor2;
function raptor_iostream_read_eof(iostr:Praptor_iostream):longint;cdecl;external libraptor2;
{ I/O Stream utility functions  }
{*
 * raptor_escaped_write_bitflags:
 * @RAPTOR_ESCAPED_WRITE_BITFLAG_BS_ESCAPES_BF   : Allow \b \f,
 * @RAPTOR_ESCAPED_WRITE_BITFLAG_BS_ESCAPES_TNRU : Allow \t \n \r \u \U
 * @RAPTOR_ESCAPED_WRITE_BITFLAG_UTF8            : Use UTF-8 instead of \u \U for U+0080 or larger (will always use \u for U+0000..U+001F and U+007F)
 * @RAPTOR_ESCAPED_WRITE_BITFLAG_SPARQL_URI_ESCAPES: Must escape #x00-#x20<>\"|^` in URIs
 * @RAPTOR_ESCAPED_WRITE_NTRIPLES_LITERAL: N-Triples literal
 * @RAPTOR_ESCAPED_WRITE_NTRIPLES_URI: N-Triples URI
 * @RAPTOR_ESCAPED_WRITE_SPARQL_LITERAL: SPARQL literal: allows raw UTF8 for printable literals
 * @RAPTOR_ESCAPED_WRITE_SPARQL_LONG_LITERAL: SPARQL long literal: no BS-escapes allowed
 * @RAPTOR_ESCAPED_WRITE_SPARQL_URI: SPARQL uri: have to escape certain characters 
 * @RAPTOR_ESCAPED_WRITE_TURTLE_URI: Turtle 2013 URIs (like SPARQL)
 * @RAPTOR_ESCAPED_WRITE_TURTLE_LITERAL: Turtle 2013 literals (like SPARQL)
 * @RAPTOR_ESCAPED_WRITE_TURTLE_LONG_LITERAL: Turtle 2013 long literals (like SPARQL)
 * @RAPTOR_ESCAPED_WRITE_JSON_LITERAL: JSON literals: UTF-8 plus \b \f \t \r \n, \uXXXX only, no \U
 *
 * Bit flags for raptor_string_escaped_write() and friends.
  }
{ N-Triples - favour writing \u, \U over UTF8  }
{ SPARQL literal: allows raw UTF8 for printable literals  }
{ SPARQL long literal: no BS-escapes allowed  }
{ SPARQL uri: have to escape certain characters  }
{ Turtle (2013) escapes are like SPARQL  }
{ JSON literals: UTF-8 plus \b \f \t \r \n \uXXXX  }
type
  Praptor_escaped_write_bitflags = ^Traptor_escaped_write_bitflags;
  Traptor_escaped_write_bitflags =  Longint;
  Const
    RAPTOR_ESCAPED_WRITE_BITFLAG_BS_ESCAPES_BF = 1;
    RAPTOR_ESCAPED_WRITE_BITFLAG_BS_ESCAPES_TNRU = 2;
    RAPTOR_ESCAPED_WRITE_BITFLAG_UTF8 = 4;
    RAPTOR_ESCAPED_WRITE_BITFLAG_SPARQL_URI_ESCAPES = 8;
    RAPTOR_ESCAPED_WRITE_NTRIPLES_LITERAL = RAPTOR_ESCAPED_WRITE_BITFLAG_BS_ESCAPES_TNRU or RAPTOR_ESCAPED_WRITE_BITFLAG_BS_ESCAPES_BF;
    RAPTOR_ESCAPED_WRITE_NTRIPLES_URI = RAPTOR_ESCAPED_WRITE_BITFLAG_SPARQL_URI_ESCAPES;
    RAPTOR_ESCAPED_WRITE_SPARQL_LITERAL = RAPTOR_ESCAPED_WRITE_BITFLAG_UTF8;
    RAPTOR_ESCAPED_WRITE_SPARQL_LONG_LITERAL = RAPTOR_ESCAPED_WRITE_BITFLAG_UTF8;
    RAPTOR_ESCAPED_WRITE_SPARQL_URI = RAPTOR_ESCAPED_WRITE_BITFLAG_UTF8 or RAPTOR_ESCAPED_WRITE_BITFLAG_SPARQL_URI_ESCAPES;
    RAPTOR_ESCAPED_WRITE_TURTLE_URI = RAPTOR_ESCAPED_WRITE_SPARQL_URI;
    RAPTOR_ESCAPED_WRITE_TURTLE_LITERAL = RAPTOR_ESCAPED_WRITE_SPARQL_LITERAL;
    RAPTOR_ESCAPED_WRITE_TURTLE_LONG_LITERAL = RAPTOR_ESCAPED_WRITE_SPARQL_LONG_LITERAL;
    RAPTOR_ESCAPED_WRITE_JSON_LITERAL = (RAPTOR_ESCAPED_WRITE_BITFLAG_BS_ESCAPES_TNRU or RAPTOR_ESCAPED_WRITE_BITFLAG_BS_ESCAPES_BF) or RAPTOR_ESCAPED_WRITE_BITFLAG_UTF8;
;
